--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-08  Sven Neumann  <sven@gimp.org>
+
+	* libgimpbase/libgimpbase-sections.txt
+	* libgimpbase/tmpl/gimpprotocol.sgml: GIMP_PROTOCOL_VERSION.
+
 2003-11-07  Sven Neumann  <sven@gimp.org>
 
 	* app/app-docs.sgml
