--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,105 @@
+2003-11-08  Michael Natterer  <mitch@gimp.org>
+
+	To be multihead safe, each new window or menu needs to be
+	associated with a GdkScreen or it will pop up on the default
+	screen.
+
+	* libgimpwidgets/gimpquerybox.[ch]
+	* app/display/gimpdisplayshell-layer-select.[ch]
+	* app/widgets/widgets-types.h
+	* app/widgets/gimpitemfactory.[ch]
+	* app/widgets/gimpitemtreeview.[ch]
+	* app/widgets/gimptemplateview.[ch]
+	* app/widgets/gimptooldialog.[ch]
+	* app/widgets/gimpviewabledialog.[ch]
+	* app/gui/channels-commands.[ch]
+	* app/gui/color-notebook.[ch]
+	* app/gui/convert-dialog.[ch]
+	* app/gui/edit-commands.[ch]
+	* app/gui/grid-dialog.[ch]
+	* app/gui/image-commands.[ch]
+	* app/gui/info-dialog.[ch]
+	* app/gui/layers-commands.[ch]
+	* app/gui/offset-dialog.[ch]
+	* app/gui/resize-dialog.[ch]
+	* app/gui/stroke-dialog.[ch]
+	* app/gui/templates-commands.[ch]
+	* app/gui/vectors-commands.[ch]: added "GtkWidget *parent"
+	paramaters to all functions which create menus, popups or windows
+	and pass "parent" to gimp_dialog_new() or one of the various
+	wrappers around it. As a side effect, this fixes bug #61092.
+
+	* app/widgets/gimpdialogfactory.[ch]: added "GdkScreen *screen"
+	instead of "parent" here since there are no possible parent
+	windows on startup.
+
+	* app/display/gimpdisplayshell-callbacks.c
+	(gimp_display_shell_origin_button_press): added a quick hack to
+	send a display to another screen: click the origin button with the
+	middle mouse button.
+
+	* app/display/gimpdisplayshell.c
+	(gimp_display_shell_screen_changed): don't chain up
+	undonditionally (don't crash).
+
+	* libgimpwidgets/gimpdialog.c (gimp_dialog_new_valist): set the
+	dialog's screen from a non-GtkWidget parent widget. The rest of
+	non-window parent widget handling is still unimplemented.
+
+	* libgimpwidgets/gimpcolorbutton.c
+	* app/widgets/gimpcolormapeditor.c
+	* app/widgets/gimpcolorpanel.c
+	* app/widgets/gimpcomponenteditor.c
+	* app/widgets/gimpcontainereditor.c
+	* app/widgets/gimpcontainergridview.c
+	* app/widgets/gimpcontainerpopup.c
+	* app/widgets/gimpcontainertreeview.c
+	* app/widgets/gimpdatafactoryview.c
+	* app/widgets/gimpdevicestatus.c
+	* app/widgets/gimpdockable.c
+	* app/widgets/gimpdrawabletreeview.c
+	* app/widgets/gimperrorconsole.c
+	* app/widgets/gimpgradienteditor.c
+	* app/widgets/gimphelp.c
+	* app/widgets/gimppaletteeditor.c
+	* app/widgets/gimppreview-popup.c
+	* app/widgets/gimpselectioneditor.c
+	* app/widgets/gimpsessioninfo.c
+	* app/widgets/gimptoolbox-color-area.c
+	* app/widgets/gimptoolbox-indicator-area.c
+	* app/widgets/gimptoolbox.c
+	* app/widgets/gimptooloptionseditor.c
+	* app/widgets/gimpvectorstreeview.c
+	* app/widgets/gimpwidgets-utils.c
+	* app/display/gimpdisplayshell-scale.c
+	* app/display/gimpnavigationview.c
+	* app/gui/module-browser.c
+	* app/gui/dialogs-commands.c
+	* app/gui/dialogs-constructors.c
+	* app/gui/drawable-commands.c
+	* app/gui/file-commands.c
+	* app/gui/file-new-dialog.c
+	* app/gui/file-save-dialog.c
+	* app/gui/gradient-editor-commands.c
+	* app/gui/gui-vtable.c
+	* app/gui/gui.c
+	* app/gui/info-window.c
+	* app/gui/palette-import-dialog.c
+	* app/gui/palettes-commands.c
+	* app/gui/qmask-commands.c
+	* app/gui/select-commands.c
+	* app/gui/tool-options-commands.c
+	* app/gui/view-commands.c
+	* app/tools/gimpcolorpickertool.c
+	* app/tools/gimpcroptool.c
+	* app/tools/gimpimagemaptool.c
+	* app/tools/gimpmeasuretool.c
+	* app/tools/gimptransformtool.c
+	* plug-ins/FractalExplorer/FractalExplorer.c
+	* plug-ins/gfig/gfig.c
+	* plug-ins/gflare/gflare.c: changed addordingly. Changed all
+	menu_position funcs to place the menu on the right screen.
+
 2003-11-08  Sven Neumann  <sven@gimp.org>
 
 	* app/config/gimpconfig-error.h: added GIMP_CONFIG_ERROR_VERSION
