--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-08  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/tmpl/gimpquerybox.sgml: updated.
+
 2003-11-08  Sven Neumann  <sven@gimp.org>
 
 	* libgimpbase/libgimpbase-sections.txt
