--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,5 +1,6 @@
 2003-11-08  Michael Natterer  <mitch@gimp.org>
 
+	* app/app-sections.txt
 	* libgimpwidgets/tmpl/gimpquerybox.sgml: updated.
 
 2003-11-08  Sven Neumann  <sven@gimp.org>
