--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-08  Manish Singh  <yosh@gimp.org>
+
+	* libgimp/gimpui.c (gimp_ui_init): #include <stdlib.h> for putenv,
+	initialize var_name to NULL so the logic still works if none of
+	the #ifdef cases hit.
+
 2003-11-08  Michael Natterer  <mitch@gimp.org>
 
 	* app/plug-in/plug-in-run.c (plug_in_run): cast the return value
