2003-11-08  Sven Neumann  <sven@gimp.org>
	* configure.in: renamed version.xml.in to version.in in all API
	reference manuals.

2003-11-08  Sven Neumann  <sven@gimp.org>

	* */version.xml.in: renamed to version.in.

	* */*-docs.sgml: include the version number using XInclude.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11330 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-08  Sven Neumann  <sven@gimp.org>
+
+	* configure.in: renamed version.xml.in to version.in in all API
+	reference manuals.
+
 2003-11-08  Manish Singh  <yosh@gimp.org>
 
 	* libgimp/gimpui.c (gimp_ui_init): #include <stdlib.h> for putenv,
