2003-11-08  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimptemplateeditor.c: don't show a radio button for
	GIMP_NO_FILL; makes the dialog a little less tall.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11335 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-08  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimptemplateeditor.c: don't show a radio button for
+	GIMP_NO_FILL; makes the dialog a little less tall.
+
+2003-11-08  Sven Neumann  <sven@gimp.org>
+
 	* app/text/gimptextlayout-render.c (gimp_text_layout_render)
 	* app/text/gimptextlayout.c (gimp_text_layout_position): handle
 	the case where the ink rectangle exceeds the logical rectangle.
