2003-11-08  Dave Neary  <bolsh@gimp.org>
	* libgimpcolor/gimpcolorspace.c: Finished gtk-docs. The docs for
	these could perhaps include formulae, but for most of the
	colorspaces that would be the same thing as copying the code
	into a comment, which seems pointless.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11337 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-08  Dave Neary  <bolsh@gimp.org>
+
+	* libgimpcolor/gimpcolorspace.c: Finished gtk-docs. The docs for
+	these could perhaps include formulae, but for most of the 
+	colorspaces that would be the same thing as copying the code 
+	into a comment, which seems pointless.
+
 2003-11-08  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimptemplateeditor.c: don't show a radio button for
