--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-08  Sven Neumann  <sven@gimp.org>
+
+	* libgimpcolor/gimpcolorspace.c
+	* libgimpcolor/gimpcmyk.c: fixed gtk-doc comments, removed
+	trailing whitespace.
+
 2003-11-08  Dave Neary  <bolsh@gimp.org>
 
 	* libgimpcolor/gimpcmyk.c: More gtk-docs.
