2003-11-08  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimphistogrameditor.c: (hopefully) fixed bug #126151.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11340 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-11-08  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimphistogrameditor.c: (hopefully) fixed bug #126151.
+
+2003-11-08  Sven Neumann  <sven@gimp.org>
+
 	* libgimpcolor/gimpcolorspace.c
 	* libgimpcolor/gimpcmyk.c: fixed gtk-doc comments, removed
 	trailing whitespace.
