2003-11-09  Sven Neumann  <sven@gimp.org>
	* configure.in: check for libwmf >= 0.2.8 and build the WMF
	plug-in conditionally.

	* plug-ins/common/Makefile.am
	* plug-ins/common/mkgen.pl
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/wmf.c: replaced the WMF plug-in with a plug-in
	using libwmf written by Dom Lachowicz and Francis James
	Franklin. Converted the plug-in to to new GimpDialog API and GIMP
	coding style. Fixes bug #108653.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11341 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/INSTALL
+++ b/INSTALL
@@ -36,7 +36,7 @@ need to deinstall the 1.2 version.
   5. You may want to install other third party libraries or programs that
      are needed for some of the available plugins. We recommend to check
      that the following libraries are installed: libpng, libjpeg,
-     libtiff, gimp-print (4.2.x), gtkhtml-2, libmng, librsvg.
+     libtiff, gimp-print (4.2.x), gtkhtml-2, libmng, librsvg, libwmf.
 
   6. Configure the GIMP by running the `configure' script. You may want
      to pass some options to it, see below.
