--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2003-11-09  Sven Neumann  <sven@gimp.org>
+
+	* configure.in: check for libwmf >= 0.2.8 and build the WMF
+	plug-in conditionally.
+
+	* plug-ins/common/Makefile.am
+	* plug-ins/common/mkgen.pl
+	* plug-ins/common/plugin-defs.pl
+	* plug-ins/common/wmf.c: replaced the WMF plug-in with a plug-in
+	using libwmf written by Dom Lachowicz and Francis James
+	Franklin. Converted the plug-in to to new GimpDialog API and GIMP
+	coding style. Fixes bug #108653.
+
 2003-11-08  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimphistogrameditor.c: (hopefully) fixed bug #126151.
