--- a/ChangeLog
+++ b/ChangeLog
@@ -7,9 +7,9 @@
 	* plug-ins/common/mkgen.pl
 	* plug-ins/common/plugin-defs.pl
 	* plug-ins/common/wmf.c: replaced the WMF plug-in with a plug-in
-	using libwmf written by Dom Lachowicz and Francis James
-	Franklin. Converted the plug-in to to new GimpDialog API and GIMP
-	coding style. Fixes bug #108653.
+	using libwmf2 written by Dom Lachowicz and Francis James Franklin.
+	Converted the plug-in to to new GimpDialog API and GIMP coding style.
+	Fixes bug #108653.
 
 2003-11-08  Sven Neumann  <sven@gimp.org>
 
