2003-11-09  Michael Natterer  <mitch@gimp.org>
	* plug-ins/common/wmf.c (load_dialog): use a scale_entry instead
	of adding a GtkHScale manually.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11343 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-09  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/common/wmf.c (load_dialog): use a scale_entry instead
+	of adding a GtkHScale manually.
+
 2003-11-09  Sven Neumann  <sven@gimp.org>
 
 	* configure.in: check for libwmf >= 0.2.8 and build the WMF
