2003-11-09  Sven Neumann  <sven@gimp.org>
	* README.gtkdoc: added some information on how to write proper
	gtk-doc comments.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11345 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-09  Sven Neumann  <sven@gimp.org>
+
+	* README.gtkdoc: added some information on how to write proper
+	gtk-doc comments.
+
 2003-11-08  Sven Neumann  <sven@gimp.org>
 
 	* */version.xml.in: renamed to version.in.
