--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 2003-11-09  Michael Natterer  <mitch@gimp.org>
 
+	* plug-ins/FractalExplorer/Dialogs.c
+	* plug-ins/common/CML_explorer.c
+	* plug-ins/common/curve_bend.c
+	* plug-ins/common/gqbist.c
+	* plug-ins/common/spheredesigner.c
+	* plug-ins/flame/flame.c
+	* plug-ins/gfig/gfig.c
+	* plug-ins/gimpressionist/brush.c
+	* plug-ins/ifscompose/ifscompose.c
+	* plug-ins/imagemap/imap_browse.c: more file selections on the
+	right screen.
+
+2003-11-09  Michael Natterer  <mitch@gimp.org>
+
 	* app/gui/file-commands.[ch]
 	* app/gui/file-dialog-utils.[ch]
 	* app/gui/file-open-dialog.[ch]
