--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2003-11-10  Sven Neumann  <sven@gimp.org>
+
+	* app/display/Makefile.am
+	* app/display/display-types.h
+	* app/display/gimpcanvas.[ch]: added GimpCanvas, derived from
+	GtkDrawingArea.
+
+	* app/display/gimpdisplayshell-callbacks.c
+	* app/display/gimpdisplayshell-render.c
+	* app/display/gimpdisplayshell.[ch]
+
 2003-11-09  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/FractalExplorer/Dialogs.c
