completed ChangeLog entry
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11351 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,7 @@
 
 	* app/display/gimpdisplayshell-callbacks.c
 	* app/display/gimpdisplayshell-render.c
-	* app/display/gimpdisplayshell.[ch]
+	* app/display/gimpdisplayshell.[ch]: changed accordingly.
 
 2003-11-09  Michael Natterer  <mitch@gimp.org>
 
