--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-10  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpcanvas.[ch]	
+	* app/display/gimpdisplayshell.c: moved GdkGCs to GimpCanvas;
+	still work in progress...
+
 2003-11-10  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell-callbacks.c: removed the
