2003-11-10  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimphistogramview.c
	* app/widgets/gimpnavigationpreview.c: destroy GdkGCs in
	GtkWidget::unrealize().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11354 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-10  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimphistogramview.c
+	* app/widgets/gimpnavigationpreview.c: destroy GdkGCs in
+	GtkWidget::unrealize().
+
 2003-11-10  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpcanvas.[ch]	
