--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-10  Sven Neumann  <sven@gimp.org>
+
+	* gimp_tips.fr.txt: removed since there's a french po file now.
+
 2003-11-08  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
