2003-11-10  Michael Natterer  <mitch@gimp.org>
	* app/gui/tools-commands.c (tools_select_cmd_callback): don't
	call tool_manager_initialize_active() with a NULL GimpDisplay.
	Fixes bug #126462.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11356 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-11-10  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/tools-commands.c (tools_select_cmd_callback): don't
+	call tool_manager_initialize_active() with a NULL GimpDisplay.
+	Fixes bug #126462.
+
+2003-11-10  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimphistogramview.c
 	* app/widgets/gimpnavigationpreview.c: destroy GdkGCs in
 	GtkWidget::unrealize().
