Update Czech translation
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11358 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-10  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated CZech translation.
+
 2003-11-07  Hasbullah Bin Pit <sebol@ikhlas.com>
 
 	* ms.po: Updated fix for bug #125360 by
