2003-11-10  Michael Natterer  <mitch@gimp.org>
	* app/gui/gui-vtable.c: #include "themes.h".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11359 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-11-10  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/gui-vtable.c: #include "themes.h".
+
+2003-11-10  Michael Natterer  <mitch@gimp.org>
+
 	Made plug-ins honor the current GIMP theme:
 
 	* app/core/gimp.[ch]: added GimpGetThemeDirFunc to the GUI vtable.
