croatian translations updated
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11360 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/hr.po
+++ b/po-libgimp/hr.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp-libgimp 0\n"
 "POT-Creation-Date: 2003-11-06 18:07+0100\n"
-"PO-Revision-Date: 2003-11-07 18:41+CET\n"
+"PO-Revision-Date: 2003-11-10 16:50+CET\n"
 "Last-Translator: auto\n"
 "Language-Team: Croatian <lokalizacija@linux.hr>\n"
 "MIME-Version: 1.0\n"
@@ -379,6 +379,8 @@ msgid ""
 "Click the eyedropper, then click a color anywhere on your screen to select "
 "that color."
 msgstr ""
+"Kliknite na kapaljku a onda kliknite na neku boju bilo gdje na vašem zaslonu "
+"za odabir te boje."
 
 #: libgimpwidgets/gimpstock.c:113
 msgid "Anchor"
