2003-11-10  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimpcolorselection.[ch]: new widget derived from
	GtkVBox. Contains a GimpColorNotebook, GimpColorScales and new/old
	color areas as known from the app's color_notebook. Will soon be
	used to replace GtkColorSelection for plug-ins.

	* app/gui/color-notebook.c: removed most code and use a
	GimpColorSelection widget. Moved the "Reset" button to the
	action_area. Cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11361 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 2003-11-10  Michael Natterer  <mitch@gimp.org>
 
+	* libgimpwidgets/Makefile.am
+	* libgimpwidgets/gimpwidgets.h
+	* libgimpwidgets/gimpwidgetstypes.h
+	* libgimpwidgets/gimpcolorselection.[ch]: new widget derived from
+	GtkVBox. Contains a GimpColorNotebook, GimpColorScales and new/old
+	color areas as known from the app's color_notebook. Will soon be
+	used to replace GtkColorSelection for plug-ins.
+
+	* app/gui/color-notebook.c: removed most code and use a
+	GimpColorSelection widget. Moved the "Reset" button to the
+	action_area. Cleanup.
+
+2003-11-10  Michael Natterer  <mitch@gimp.org>
+
 	* app/gui/gui-vtable.c: #include "themes.h".
 
 2003-11-10  Michael Natterer  <mitch@gimp.org>
