2003-11-10  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/tmpl/gimpcolorselection.sgml: new template.

	* libgimpwidgets/libgimpwidgets-docs.sgml
	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/libgimpwidgets.types: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11362 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,11 @@
+2003-11-10  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/tmpl/gimpcolorselection.sgml: new template.
+
+	* libgimpwidgets/libgimpwidgets-docs.sgml
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/libgimpwidgets.types: updated.
+
 2003-11-09  Sven Neumann  <sven@gimp.org>
 
 	* README.gtkdoc: added some information on how to write proper
