2003-11-10  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/gimpcolorselection.c: added API docs for all
	public functions.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11363 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-10  Michael Natterer  <mitch@gimp.org>
 
+	* libgimpwidgets/gimpcolorselection.c: added API docs for all
+	public functions.
+
+2003-11-10  Michael Natterer  <mitch@gimp.org>
+
 	* libgimpwidgets/Makefile.am
 	* libgimpwidgets/gimpwidgets.h
 	* libgimpwidgets/gimpwidgetstypes.h
