2003-11-10  Michael Natterer  <mitch@gimp.org>
	* app/gui/color-notebook.[ch]: removed color_notebook_new() and
	renamed color_notebook_viewable_new() to color_notebook_new().

	* app/gui/gradient-editor-commands.c
	* app/widgets/gimpcolormapeditor.c
	* app/widgets/gimppaletteeditor.c
	* app/widgets/gimpcolorpanel.c
	* app/widgets/gimptoolbox-color-area.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11364 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2003-11-10  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/color-notebook.[ch]: removed color_notebook_new() and
+	renamed color_notebook_viewable_new() to color_notebook_new().
+
+	* app/gui/gradient-editor-commands.c
+	* app/widgets/gimpcolormapeditor.c
+	* app/widgets/gimppaletteeditor.c
+	* app/widgets/gimpcolorpanel.c
+	* app/widgets/gimptoolbox-color-area.c: changed accordingly.
+
+2003-11-10  Michael Natterer  <mitch@gimp.org>
+
 	* libgimpwidgets/gimpcolorselection.c: added API docs for all
 	public functions.
 
