--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-10  Dave Neary  <bolsh@gimp.org>
+
+	* app/tools/gimpimagemaptool.c: Moved assignment of shell to 
+	the place where it will be used, preventing a null pointer 
+	dereference when it's not used. Fixes bug #126524.
+
 2003-11-10  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/color-notebook.[ch]: removed color_notebook_new() and
