2003-11-10  Sven Neumann  <sven@gimp.org>
	* app/display/gimpcanvas.[ch]
	* app/tools/gimpdrawtool.[ch]: moved GC from the the draw tool to
	GimpCanvas. Added wrappers around GDK drawing functions and do all
	canvas drawing by means of these new functions.

	* app/display/gimpdisplayshell-appearance.c
	* app/display/gimpdisplayshell-render.c
	* app/display/gimpdisplayshell.c
	* app/tools/gimpcroptool.c
	* app/tools/gimpfuzzyselecttool.c: draw using the new GimpCanvas
	functions.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11367 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2003-11-10  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpcanvas.[ch]	
+	* app/tools/gimpdrawtool.[ch]: moved GC from the the draw tool to
+	GimpCanvas. Added wrappers around GDK drawing functions and do all
+	canvas drawing by means of these new functions.
+
+	* app/display/gimpdisplayshell-appearance.c
+	* app/display/gimpdisplayshell-render.c
+	* app/display/gimpdisplayshell.c
+	* app/tools/gimpcroptool.c
+	* app/tools/gimpfuzzyselecttool.c: draw using the new GimpCanvas
+	functions.
+
 2003-11-10  Dave Neary  <bolsh@gimp.org>
 
 	* app/tools/gimpimagemaptool.c: Moved assignment of shell to 
