--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-10  Dave Neary  <bolsh@gimp.org>
+
+	* app/tools/gimpimagemaptool.c: Removed some code I'd added 
+	earlier and forgot to take out again.
+
 2003-11-10  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpcanvas.[ch]	
