2003-11-10  Dave Neary  <bolsh@gimp.org>
        * app/widgets/gimpdataeditor.c: Implement save button. Partially
        addresses bug #116606.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11369 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-10  Dave Neary  <bolsh@gimp.org>
 
+	* app/widgets/gimpdataeditor.c: Implement save button. Partially
+	addresses bug #116606.
+
+2003-11-10  Dave Neary  <bolsh@gimp.org>
+
 	* app/tools/gimpimagemaptool.c: Removed some code I'd added 
 	earlier and forgot to take out again.
 
