2003-11-10  Dave Neary  <bolsh@gimp.org>
        * app/widgets/gimpdataeditor.c: Fix warnings and one error in
        last commit.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11370 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-10  Dave Neary  <bolsh@gimp.org>
 
+	* app/widgets/gimpdataeditor.c: Fix warnings and one error in 
+	last commit.
+
+2003-11-10  Dave Neary  <bolsh@gimp.org>
+
 	* app/widgets/gimpdataeditor.c: Implement save button. Partially
 	addresses bug #116606.
 
