2003-11-11  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpdialogfactory.c
	* app/widgets/gimptooldialog.c: updated gtk-doc comments.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11372 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-11  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpdialogfactory.c
+	* app/widgets/gimptooldialog.c: updated gtk-doc comments.
+
 2003-11-11 Simon Budig  <simon@gimp.org>
 
 	* app/vectors/gimpvectors.c: New vectors now are invisible by
