--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-11  Sven Neumann  <sven@gimp.org>
+
+	* app/app-docs.sgml
+	* app/app-sections.txt
+	* app/app.types: updated.
+
 2003-11-10  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/tmpl/gimpcolorselection.sgml: new template.
