2003-11-11  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/Makefile.am
	* plug-ins/common/mkgen.pl
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/dicom.c: added DICOM file plug-in written by
	Dov Grobgeld.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11374 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2003-11-11  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/Makefile.am
+	* plug-ins/common/mkgen.pl
+	* plug-ins/common/plugin-defs.pl
+	* plug-ins/common/dicom.c: added DICOM file plug-in written by
+	Dov Grobgeld.
+
+2003-11-11  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpdialogfactory.c
 	* app/widgets/gimptooldialog.c: updated gtk-doc comments.
 
