--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-11  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: added new DICOM plug-in.
+
 2003-11-10  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated CZech translation.
