2003-11-11  Sven Neumann  <sven@gimp.org>
	* app/display/gimpdisplayshell-selection.[ch]: some more cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11379 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-11-11  Sven Neumann  <sven@gimp.org>
 
+	* app/display/gimpdisplayshell-selection.[ch]: some more cleanup.
+
+2003-11-11  Sven Neumann  <sven@gimp.org>
+
 	* app/display/Makefile.am
 	* app/display/gimpdisplayshell-marching-ants.h: removed this file.
 
